--- a/WorldOfTheThreeKingdoms.iOS/WorldOfTheThreeKingdoms.iOS.csproj
+++ b/WorldOfTheThreeKingdoms.iOS/WorldOfTheThreeKingdoms.iOS.csproj
@@ -3923,20 +3923,20 @@
     <Compile Include="..\WorldOfTheThreeKingdoms\GamePlugins\ArchitectureSurveyPlugin\ArchitectureSurveyPlugin.cs">
       <Link>GamePlugins\ArchitectureSurveyPlugin\ArchitectureSurveyPlugin.cs</Link>
     </Compile>
-    <Compile Include="..\WorldOfTheThreeKingdoms\GamePlugins\TroopArrangementPlugin\Column.cs">
-      <Link>GamePlugins\TroopArrangementPlugin\Column.cs</Link>
+    <Compile Include="..\WorldOfTheThreeKingdoms\GamePlugins\TroopFormationPlugin\Column.cs">
+      <Link>GamePlugins\TroopFormationPlugin\Column.cs</Link>
     </Compile>
-    <Compile Include="..\WorldOfTheThreeKingdoms\GamePlugins\TroopArrangementPlugin\ListKind.cs">
-      <Link>GamePlugins\TroopArrangementPlugin\ListKind.cs</Link>
+    <Compile Include="..\WorldOfTheThreeKingdoms\GamePlugins\TroopFormationPlugin\ListKind.cs">
+      <Link>GamePlugins\TroopFormationPlugin\ListKind.cs</Link>
     </Compile>
-    <Compile Include="..\WorldOfTheThreeKingdoms\GamePlugins\TroopArrangementPlugin\Tab.cs">
-      <Link>GamePlugins\TroopArrangementPlugin\Tab.cs</Link>
+    <Compile Include="..\WorldOfTheThreeKingdoms\GamePlugins\TroopFormationPlugin\Tab.cs">
+      <Link>GamePlugins\TroopFormationPlugin\Tab.cs</Link>
     </Compile>
-    <Compile Include="..\WorldOfTheThreeKingdoms\GamePlugins\TroopArrangementPlugin\TabListInFrame.cs">
-      <Link>GamePlugins\TroopArrangementPlugin\TabListInFrame.cs</Link>
+    <Compile Include="..\WorldOfTheThreeKingdoms\GamePlugins\TroopFormationPlugin\TabListInFrame.cs">
+      <Link>GamePlugins\TroopFormationPlugin\TabListInFrame.cs</Link>
     </Compile>
-    <Compile Include="..\WorldOfTheThreeKingdoms\GamePlugins\TroopArrangementPlugin\TabListPlugin.cs">
-      <Link>GamePlugins\TroopArrangementPlugin\TabListPlugin.cs</Link>
+    <Compile Include="..\WorldOfTheThreeKingdoms\GamePlugins\TroopFormationPlugin\TabListPlugin.cs">
+      <Link>GamePlugins\TroopFormationPlugin\TabListPlugin.cs</Link>
     </Compile>
     <Compile Include="..\WorldOfTheThreeKingdoms\GamePlugins\CommentTextPlugin\CommentText.cs">
       <Link>GamePlugins\CommentTextPlugin\CommentText.cs</Link>
@@ -6133,8 +6133,8 @@
     <BundleResource Include="..\Content\Data\Plugins\ArchitectureSurveyData.xml">
       <Link>Content\Data\Plugins\ArchitectureSurveyData.xml</Link>
     </BundleResource>
-    <BundleResource Include="..\Content\Data\Plugins\TroopArrangementPlugin.xml">
-      <Link>Content\Data\Plugins\TroopArrangementPlugin.xml</Link>
+    <BundleResource Include="..\Content\Data\Plugins\TroopFormationPlugin.xml">
+      <Link>Content\Data\Plugins\TroopFormationPlugin.xml</Link>
     </BundleResource>
     <BundleResource Include="..\Content\Data\Plugins\CommentTextData.xml">
       <Link>Content\Data\Plugins\CommentTextData.xml</Link>
@@ -8922,83 +8922,83 @@
     <BundleResource Include="..\Content\Textures\GameComponents\ArchitectureSurvey\Data\Backgrounds\Bar\Yellow.png">
       <Link>Content\Textures\GameComponents\ArchitectureSurvey\Data\Backgrounds\Bar\Yellow.png</Link>
     </BundleResource>
-    <BundleResource Include="..\Content\Textures\GameComponents\TroopArrangement\Data\BackGround.png">
-      <Link>Content\Textures\GameComponents\TroopArrangement\Data\BackGround.png</Link>
+    <BundleResource Include="..\Content\Textures\GameComponents\TroopFormation\Data\BackGround.png">
+      <Link>Content\Textures\GameComponents\TroopFormation\Data\BackGround.png</Link>
     </BundleResource>
-    <BundleResource Include="..\Content\Textures\GameComponents\TroopArrangement\Data\BottomEdge.png">
-      <Link>Content\Textures\GameComponents\TroopArrangement\Data\BottomEdge.png</Link>
+    <BundleResource Include="..\Content\Textures\GameComponents\TroopFormation\Data\BottomEdge.png">
+      <Link>Content\Textures\GameComponents\TroopFormation\Data\BottomEdge.png</Link>
     </BundleResource>
-    <BundleResource Include="..\Content\Textures\GameComponents\TroopArrangement\Data\BottomLeft.png">
-      <Link>Content\Textures\GameComponents\TroopArrangement\Data\BottomLeft.png</Link>
+    <BundleResource Include="..\Content\Textures\GameComponents\TroopFormation\Data\BottomLeft.png">
+      <Link>Content\Textures\GameComponents\TroopFormation\Data\BottomLeft.png</Link>
     </BundleResource>
-    <BundleResource Include="..\Content\Textures\GameComponents\TroopArrangement\Data\BottomRight.png">
-      <Link>Content\Textures\GameComponents\TroopArrangement\Data\BottomRight.png</Link>
+    <BundleResource Include="..\Content\Textures\GameComponents\TroopFormation\Data\BottomRight.png">
+      <Link>Content\Textures\GameComponents\TroopFormation\Data\BottomRight.png</Link>
     </BundleResource>
-    <BundleResource Include="..\Content\Textures\GameComponents\TroopArrangement\Data\CheckBox.png">
-      <Link>Content\Textures\GameComponents\TroopArrangement\Data\CheckBox.png</Link>
+    <BundleResource Include="..\Content\Textures\GameComponents\TroopFormation\Data\CheckBox.png">
+      <Link>Content\Textures\GameComponents\TroopFormation\Data\CheckBox.png</Link>
     </BundleResource>
-    <BundleResource Include="..\Content\Textures\GameComponents\TroopArrangement\Data\CheckBoxSelected.png">
-      <Link>Content\Textures\GameComponents\TroopArrangement\Data\CheckBoxSelected.png</Link>
+    <BundleResource Include="..\Content\Textures\GameComponents\TroopFormation\Data\CheckBoxSelected.png">
+      <Link>Content\Textures\GameComponents\TroopFormation\Data\CheckBoxSelected.png</Link>
     </BundleResource>
-    <BundleResource Include="..\Content\Textures\GameComponents\TroopArrangement\Data\ColumnHeader.jpg">
-      <Link>Content\Textures\GameComponents\TroopArrangement\Data\ColumnHeader.jpg</Link>
+    <BundleResource Include="..\Content\Textures\GameComponents\TroopFormation\Data\ColumnHeader.jpg">
+      <Link>Content\Textures\GameComponents\TroopFormation\Data\ColumnHeader.jpg</Link>
     </BundleResource>
-    <BundleResource Include="..\Content\Textures\GameComponents\TroopArrangement\Data\ColumnHeader.png">
-      <Link>Content\Textures\GameComponents\TroopArrangement\Data\ColumnHeader.png</Link>
+    <BundleResource Include="..\Content\Textures\GameComponents\TroopFormation\Data\ColumnHeader.png">
+      <Link>Content\Textures\GameComponents\TroopFormation\Data\ColumnHeader.png</Link>
     </BundleResource>
-    <BundleResource Include="..\Content\Textures\GameComponents\TroopArrangement\Data\ColumnSpliter.jpg">
-      <Link>Content\Textures\GameComponents\TroopArrangement\Data\ColumnSpliter.jpg</Link>
+    <BundleResource Include="..\Content\Textures\GameComponents\TroopFormation\Data\ColumnSpliter.jpg">
+      <Link>Content\Textures\GameComponents\TroopFormation\Data\ColumnSpliter.jpg</Link>
     </BundleResource>
-    <BundleResource Include="..\Content\Textures\GameComponents\TroopArrangement\Data\FocusTrack.jpg">
-      <Link>Content\Textures\GameComponents\TroopArrangement\Data\FocusTrack.jpg</Link>
+    <BundleResource Include="..\Content\Textures\GameComponents\TroopFormation\Data\FocusTrack.jpg">
+      <Link>Content\Textures\GameComponents\TroopFormation\Data\FocusTrack.jpg</Link>
     </BundleResource>
-    <BundleResource Include="..\Content\Textures\GameComponents\TroopArrangement\Data\jiahao.png">
-      <Link>Content\Textures\GameComponents\TroopArrangement\Data\jiahao.png</Link>
+    <BundleResource Include="..\Content\Textures\GameComponents\TroopFormation\Data\jiahao.png">
+      <Link>Content\Textures\GameComponents\TroopFormation\Data\jiahao.png</Link>
     </BundleResource>
-    <BundleResource Include="..\Content\Textures\GameComponents\TroopArrangement\Data\jianhao.png">
-      <Link>Content\Textures\GameComponents\TroopArrangement\Data\jianhao.png</Link>
+    <BundleResource Include="..\Content\Textures\GameComponents\TroopFormation\Data\jianhao.png">
+      <Link>Content\Textures\GameComponents\TroopFormation\Data\jianhao.png</Link>
     </BundleResource>
-    <BundleResource Include="..\Content\Textures\GameComponents\TroopArrangement\Data\LeftArrow.png">
-      <Link>Content\Textures\GameComponents\TroopArrangement\Data\LeftArrow.png</Link>
+    <BundleResource Include="..\Content\Textures\GameComponents\TroopFormation\Data\LeftArrow.png">
+      <Link>Content\Textures\GameComponents\TroopFormation\Data\LeftArrow.png</Link>
     </BundleResource>
-    <BundleResource Include="..\Content\Textures\GameComponents\TroopArrangement\Data\LeftEdge.png">
-      <Link>Content\Textures\GameComponents\TroopArrangement\Data\LeftEdge.png</Link>
+    <BundleResource Include="..\Content\Textures\GameComponents\TroopFormation\Data\LeftEdge.png">
+      <Link>Content\Textures\GameComponents\TroopFormation\Data\LeftEdge.png</Link>
     </BundleResource>
-    <BundleResource Include="..\Content\Textures\GameComponents\TroopArrangement\Data\RightArrow.png">
-      <Link>Content\Textures\GameComponents\TroopArrangement\Data\RightArrow.png</Link>
+    <BundleResource Include="..\Content\Textures\GameComponents\TroopFormation\Data\RightArrow.png">
+      <Link>Content\Textures\GameComponents\TroopFormation\Data\RightArrow.png</Link>
     </BundleResource>
-    <BundleResource Include="..\Content\Textures\GameComponents\TroopArrangement\Data\RightEdge.png">
-      <Link>Content\Textures\GameComponents\TroopArrangement\Data\RightEdge.png</Link>
+    <BundleResource Include="..\Content\Textures\GameComponents\TroopFormation\Data\RightEdge.png">
+      <Link>Content\Textures\GameComponents\TroopFormation\Data\RightEdge.png</Link>
     </BundleResource>
-    <BundleResource Include="..\Content\Textures\GameComponents\TroopArrangement\Data\RoundCheckBox.png">
-      <Link>Content\Textures\GameComponents\TroopArrangement\Data\RoundCheckBox.png</Link>
+    <BundleResource Include="..\Content\Textures\GameComponents\TroopFormation\Data\RoundCheckBox.png">
+      <Link>Content\Textures\GameComponents\TroopFormation\Data\RoundCheckBox.png</Link>
     </BundleResource>
-    <BundleResource Include="..\Content\Textures\GameComponents\TroopArrangement\Data\RoundCheckBoxSelected.png">
-      <Link>Content\Textures\GameComponents\TroopArrangement\Data\RoundCheckBoxSelected.png</Link>
+    <BundleResource Include="..\Content\Textures\GameComponents\TroopFormation\Data\RoundCheckBoxSelected.png">
+      <Link>Content\Textures\GameComponents\TroopFormation\Data\RoundCheckBoxSelected.png</Link>
     </BundleResource>
-    <BundleResource Include="..\Content\Textures\GameComponents\TroopArrangement\Data\ScrollButton.jpg">
-      <Link>Content\Textures\GameComponents\TroopArrangement\Data\ScrollButton.jpg</Link>
+    <BundleResource Include="..\Content\Textures\GameComponents\TroopFormation\Data\ScrollButton.jpg">
+      <Link>Content\Textures\GameComponents\TroopFormation\Data\ScrollButton.jpg</Link>
     </BundleResource>
-    <BundleResource Include="..\Content\Textures\GameComponents\TroopArrangement\Data\ScrollButton.png">
-      <Link>Content\Textures\GameComponents\TroopArrangement\Data\ScrollButton.png</Link>
+    <BundleResource Include="..\Content\Textures\GameComponents\TroopFormation\Data\ScrollButton.png">
+      <Link>Content\Textures\GameComponents\TroopFormation\Data\ScrollButton.png</Link>
     </BundleResource>
-    <BundleResource Include="..\Content\Textures\GameComponents\TroopArrangement\Data\ScrollTrack.jpg">
-      <Link>Content\Textures\GameComponents\TroopArrangement\Data\ScrollTrack.jpg</Link>
+    <BundleResource Include="..\Content\Textures\GameComponents\TroopFormation\Data\ScrollTrack.jpg">
+      <Link>Content\Textures\GameComponents\TroopFormation\Data\ScrollTrack.jpg</Link>
     </BundleResource>
-    <BundleResource Include="..\Content\Textures\GameComponents\TroopArrangement\Data\TabButton.png">
-      <Link>Content\Textures\GameComponents\TroopArrangement\Data\TabButton.png</Link>
+    <BundleResource Include="..\Content\Textures\GameComponents\TroopFormation\Data\TabButton.png">
+      <Link>Content\Textures\GameComponents\TroopFormation\Data\TabButton.png</Link>
     </BundleResource>
-    <BundleResource Include="..\Content\Textures\GameComponents\TroopArrangement\Data\TabButtonSelected.png">
-      <Link>Content\Textures\GameComponents\TroopArrangement\Data\TabButtonSelected.png</Link>
+    <BundleResource Include="..\Content\Textures\GameComponents\TroopFormation\Data\TabButtonSelected.png">
+      <Link>Content\Textures\GameComponents\TroopFormation\Data\TabButtonSelected.png</Link>
     </BundleResource>
-    <BundleResource Include="..\Content\Textures\GameComponents\TroopArrangement\Data\TopEdge.png">
-      <Link>Content\Textures\GameComponents\TroopArrangement\Data\TopEdge.png</Link>
+    <BundleResource Include="..\Content\Textures\GameComponents\TroopFormation\Data\TopEdge.png">
+      <Link>Content\Textures\GameComponents\TroopFormation\Data\TopEdge.png</Link>
     </BundleResource>
-    <BundleResource Include="..\Content\Textures\GameComponents\TroopArrangement\Data\TopLeft.png">
-      <Link>Content\Textures\GameComponents\TroopArrangement\Data\TopLeft.png</Link>
+    <BundleResource Include="..\Content\Textures\GameComponents\TroopFormation\Data\TopLeft.png">
+      <Link>Content\Textures\GameComponents\TroopFormation\Data\TopLeft.png</Link>
     </BundleResource>
-    <BundleResource Include="..\Content\Textures\GameComponents\TroopArrangement\Data\TopRight.png">
-      <Link>Content\Textures\GameComponents\TroopArrangement\Data\TopRight.png</Link>
+    <BundleResource Include="..\Content\Textures\GameComponents\TroopFormation\Data\TopRight.png">
+      <Link>Content\Textures\GameComponents\TroopFormation\Data\TopRight.png</Link>
     </BundleResource>
     <BundleResource Include="..\Content\Textures\GameComponents\ConfirmationDialog\Data\Background.png">
       <Link>Content\Textures\GameComponents\ConfirmationDialog\Data\Background.png</Link>
