--- a/WorldOfTheThreeKingdoms/WorldOfTheThreeKingdoms.csproj
+++ b/WorldOfTheThreeKingdoms/WorldOfTheThreeKingdoms.csproj
@@ -55286,6 +55286,24 @@
       <Link>Content\Textures\Resources\Troop\999\Move.png</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\Textures\GameComponents\PersonPortrait\Images\Default\9997.jpg" />
+    <Content Include="Content\Textures\GameComponents\PersonPortrait\Images\Default\9997s.jpg" />
+    <Content Include="Content\Textures\GameComponents\PersonPortrait\Images\Default\9998.jpg" />
+    <Content Include="Content\Textures\GameComponents\PersonPortrait\Images\Default\9998s.jpg" />
+    <Content Include="Content\Textures\GameComponents\TabList\Data\CheckBox.png" />
+    <Content Include="Content\Textures\GameComponents\TabList\Data\CheckBoxSelected.png" />
+    <Content Include="Content\Textures\GameComponents\TabList\Data\ColumnHeader.png" />
+    <Content Include="Content\Textures\GameComponents\TabList\Data\ColumnSpliter.png" />
+    <Content Include="Content\Textures\GameComponents\TabList\Data\FocusTrack.png" />
+    <Content Include="Content\Textures\GameComponents\TabList\Data\LeftArrow.png" />
+    <Content Include="Content\Textures\GameComponents\TabList\Data\RightArrow.png" />
+    <Content Include="Content\Textures\GameComponents\TabList\Data\RoundCheckBox.png" />
+    <Content Include="Content\Textures\GameComponents\TabList\Data\RoundCheckBoxSelected.png" />
+    <Content Include="Content\Textures\GameComponents\TabList\Data\ScrollButton.png" />
+    <Content Include="Content\Textures\GameComponents\TabList\Data\ScrollTrack.png" />
+    <Content Include="Content\Textures\GameComponents\TabList\Data\Select.wav" />
+    <Content Include="Content\Textures\GameComponents\TabList\Data\TabButton.png" />
+    <Content Include="Content\Textures\GameComponents\TabList\Data\TabButtonSelected.png" />
     <Content Include="Icon.ico" />
   </ItemGroup>
   <ItemGroup>
