--- a/WorldOfTheThreeKingdoms/packages.config
+++ b/WorldOfTheThreeKingdoms/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="MersenneTwister" version="1.0.5" targetFramework="net45" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net45" />
 </packages>
