--- a/WorldOfTheThreeKingdoms/WorldOfTheThreeKingdoms.csproj
+++ b/WorldOfTheThreeKingdoms/WorldOfTheThreeKingdoms.csproj
@@ -20248,6 +20248,160 @@
     <Content Include="Content\Font\Messages.txt" />
     <Content Include="Content\Font\MessagesDenyT.txt" />
     <Content Include="Content\Font\MessagesL.txt" />
+    <Content Include="Content\Sound\Animation\Person\185\185-attacked-01.wav" />
+    <Content Include="Content\Sound\Animation\Person\185\185-attacked-02.wav" />
+    <Content Include="Content\Sound\Animation\Person\185\185-attacked-03.wav" />
+    <Content Include="Content\Sound\Animation\Person\185\CriticalStrike1.wav" />
+    <Content Include="Content\Sound\Animation\Person\185\CriticalStrike10.wav" />
+    <Content Include="Content\Sound\Animation\Person\185\CriticalStrike2.wav" />
+    <Content Include="Content\Sound\Animation\Person\185\CriticalStrike3.wav" />
+    <Content Include="Content\Sound\Animation\Person\185\CriticalStrike4.wav" />
+    <Content Include="Content\Sound\Animation\Person\185\CriticalStrike5.wav" />
+    <Content Include="Content\Sound\Animation\Person\185\CriticalStrike6.wav" />
+    <Content Include="Content\Sound\Animation\Person\185\CriticalStrike7.wav" />
+    <Content Include="Content\Sound\Animation\Person\185\CriticalStrike8.wav" />
+    <Content Include="Content\Sound\Animation\Person\185\CriticalStrike9.wav" />
+    <Content Include="Content\Sound\Animation\Person\18\18-attacked-01.wav" />
+    <Content Include="Content\Sound\Animation\Person\18\18-attacked-02.wav" />
+    <Content Include="Content\Sound\Animation\Person\18\18-attacked-03.wav" />
+    <Content Include="Content\Sound\Animation\Person\18\18-attacked-04.wav" />
+    <Content Include="Content\Sound\Animation\Person\18\CriticalStrike1.wav" />
+    <Content Include="Content\Sound\Animation\Person\18\CriticalStrike2.wav" />
+    <Content Include="Content\Sound\Animation\Person\18\CriticalStrike3.wav" />
+    <Content Include="Content\Sound\Animation\Person\18\CriticalStrike4.wav" />
+    <Content Include="Content\Sound\Animation\Person\18\CriticalStrike5.wav" />
+    <Content Include="Content\Sound\Animation\Person\18\CriticalStrike6.wav" />
+    <Content Include="Content\Sound\Animation\Person\245\245-attacked-01.wav" />
+    <Content Include="Content\Sound\Animation\Person\245\245-attacked-02.wav" />
+    <Content Include="Content\Sound\Animation\Person\245\245-attacked-03.wav" />
+    <Content Include="Content\Sound\Animation\Person\245\245-attacked-04.wav" />
+    <Content Include="Content\Sound\Animation\Person\245\CriticalStrike1.wav" />
+    <Content Include="Content\Sound\Animation\Person\245\CriticalStrike2.wav" />
+    <Content Include="Content\Sound\Animation\Person\245\CriticalStrike3.wav" />
+    <Content Include="Content\Sound\Animation\Person\245\CriticalStrike4.wav" />
+    <Content Include="Content\Sound\Animation\Person\24\24-attacked-01.wav" />
+    <Content Include="Content\Sound\Animation\Person\24\24-attacked-02.wav" />
+    <Content Include="Content\Sound\Animation\Person\24\24-attacked-03.wav" />
+    <Content Include="Content\Sound\Animation\Person\24\24-attacked-04.wav" />
+    <Content Include="Content\Sound\Animation\Person\24\CriticalStrike1.wav" />
+    <Content Include="Content\Sound\Animation\Person\24\CriticalStrike2.wav" />
+    <Content Include="Content\Sound\Animation\Person\24\CriticalStrike3.wav" />
+    <Content Include="Content\Sound\Animation\Person\24\CriticalStrike4.wav" />
+    <Content Include="Content\Sound\Animation\Person\24\CriticalStrike5.wav" />
+    <Content Include="Content\Sound\Animation\Person\289\289-attacked-01.wav" />
+    <Content Include="Content\Sound\Animation\Person\289\289-attacked-02.wav" />
+    <Content Include="Content\Sound\Animation\Person\289\289-attacked-03.wav" />
+    <Content Include="Content\Sound\Animation\Person\289\289-attacked-04.wav" />
+    <Content Include="Content\Sound\Animation\Person\289\CriticalStrike1.wav" />
+    <Content Include="Content\Sound\Animation\Person\289\CriticalStrike10.wav" />
+    <Content Include="Content\Sound\Animation\Person\289\CriticalStrike11.wav" />
+    <Content Include="Content\Sound\Animation\Person\289\CriticalStrike12.wav" />
+    <Content Include="Content\Sound\Animation\Person\289\CriticalStrike13.wav" />
+    <Content Include="Content\Sound\Animation\Person\289\CriticalStrike2.wav" />
+    <Content Include="Content\Sound\Animation\Person\289\CriticalStrike3.wav" />
+    <Content Include="Content\Sound\Animation\Person\289\CriticalStrike4.wav" />
+    <Content Include="Content\Sound\Animation\Person\289\CriticalStrike5.wav" />
+    <Content Include="Content\Sound\Animation\Person\289\CriticalStrike6.wav" />
+    <Content Include="Content\Sound\Animation\Person\289\CriticalStrike7.wav" />
+    <Content Include="Content\Sound\Animation\Person\289\CriticalStrike8.wav" />
+    <Content Include="Content\Sound\Animation\Person\289\CriticalStrike9.wav" />
+    <Content Include="Content\Sound\Animation\Person\367\367-attacked-01.wav" />
+    <Content Include="Content\Sound\Animation\Person\367\CriticalStrike1.wav" />
+    <Content Include="Content\Sound\Animation\Person\367\CriticalStrike2.wav" />
+    <Content Include="Content\Sound\Animation\Person\367\CriticalStrike3.wav" />
+    <Content Include="Content\Sound\Animation\Person\367\CriticalStrike4.wav" />
+    <Content Include="Content\Sound\Animation\Person\367\CriticalStrike5.wav" />
+    <Content Include="Content\Sound\Animation\Person\367\CriticalStrike6.wav" />
+    <Content Include="Content\Sound\Animation\Person\367\CriticalStrike7.wav" />
+    <Content Include="Content\Sound\Animation\Person\367\CriticalStrike8.wav" />
+    <Content Include="Content\Sound\Animation\Person\367\CriticalStrike9.wav" />
+    <Content Include="Content\Sound\Animation\Person\395\395-attacked-01.wav" />
+    <Content Include="Content\Sound\Animation\Person\395\395-attacked-02.wav" />
+    <Content Include="Content\Sound\Animation\Person\395\395-attacked-03.wav" />
+    <Content Include="Content\Sound\Animation\Person\395\395-attacked-04.wav" />
+    <Content Include="Content\Sound\Animation\Person\395\395-attacked-05.wav" />
+    <Content Include="Content\Sound\Animation\Person\395\CriticalStrike1.wav" />
+    <Content Include="Content\Sound\Animation\Person\395\CriticalStrike2.wav" />
+    <Content Include="Content\Sound\Animation\Person\395\CriticalStrike3.wav" />
+    <Content Include="Content\Sound\Animation\Person\395\CriticalStrike4.wav" />
+    <Content Include="Content\Sound\Animation\Person\395\CriticalStrike5.wav" />
+    <Content Include="Content\Sound\Animation\Person\395\CriticalStrike6.wav" />
+    <Content Include="Content\Sound\Animation\Person\395\CriticalStrike7.wav" />
+    <Content Include="Content\Sound\Animation\Person\424\424-attacked-01.wav" />
+    <Content Include="Content\Sound\Animation\Person\424\424-attacked-02.wav" />
+    <Content Include="Content\Sound\Animation\Person\424\424-attacked-03.wav" />
+    <Content Include="Content\Sound\Animation\Person\424\424-attacked-04.wav" />
+    <Content Include="Content\Sound\Animation\Person\424\424-attacked-05.wav" />
+    <Content Include="Content\Sound\Animation\Person\424\424-attacked-06.wav" />
+    <Content Include="Content\Sound\Animation\Person\424\424-attacked-07.wav" />
+    <Content Include="Content\Sound\Animation\Person\424\CriticalStrike1.wav" />
+    <Content Include="Content\Sound\Animation\Person\424\CriticalStrike2.wav" />
+    <Content Include="Content\Sound\Animation\Person\424\CriticalStrike3.wav" />
+    <Content Include="Content\Sound\Animation\Person\424\CriticalStrike4.wav" />
+    <Content Include="Content\Sound\Animation\Person\424\CriticalStrike5.wav" />
+    <Content Include="Content\Sound\Animation\Person\424\CriticalStrike6.wav" />
+    <Content Include="Content\Sound\Animation\Person\432\432-attaced-02.wav" />
+    <Content Include="Content\Sound\Animation\Person\432\432-attacked-01.wav" />
+    <Content Include="Content\Sound\Animation\Person\432\CriticalStrike1.wav" />
+    <Content Include="Content\Sound\Animation\Person\432\CriticalStrike10.wav" />
+    <Content Include="Content\Sound\Animation\Person\432\CriticalStrike11.wav" />
+    <Content Include="Content\Sound\Animation\Person\432\CriticalStrike12.wav" />
+    <Content Include="Content\Sound\Animation\Person\432\CriticalStrike13.wav" />
+    <Content Include="Content\Sound\Animation\Person\432\CriticalStrike14.wav" />
+    <Content Include="Content\Sound\Animation\Person\432\CriticalStrike15.wav" />
+    <Content Include="Content\Sound\Animation\Person\432\CriticalStrike16.wav" />
+    <Content Include="Content\Sound\Animation\Person\432\CriticalStrike17.wav" />
+    <Content Include="Content\Sound\Animation\Person\432\CriticalStrike18.wav" />
+    <Content Include="Content\Sound\Animation\Person\432\CriticalStrike2.wav" />
+    <Content Include="Content\Sound\Animation\Person\432\CriticalStrike3.wav" />
+    <Content Include="Content\Sound\Animation\Person\432\CriticalStrike4.wav" />
+    <Content Include="Content\Sound\Animation\Person\432\CriticalStrike5.wav" />
+    <Content Include="Content\Sound\Animation\Person\432\CriticalStrike6.wav" />
+    <Content Include="Content\Sound\Animation\Person\432\CriticalStrike7.wav" />
+    <Content Include="Content\Sound\Animation\Person\432\CriticalStrike8.wav" />
+    <Content Include="Content\Sound\Animation\Person\432\CriticalStrike9.wav" />
+    <Content Include="Content\Sound\Animation\Person\62\62-attacked-01.wav" />
+    <Content Include="Content\Sound\Animation\Person\62\62-attacked-02.wav" />
+    <Content Include="Content\Sound\Animation\Person\62\CriticalStrike1.wav" />
+    <Content Include="Content\Sound\Animation\Person\660\660-attacked-01.wav" />
+    <Content Include="Content\Sound\Animation\Person\660\660-attacked-02.wav" />
+    <Content Include="Content\Sound\Animation\Person\660\660-attacked-03.wav" />
+    <Content Include="Content\Sound\Animation\Person\660\CriticalStrike1.wav" />
+    <Content Include="Content\Sound\Animation\Person\660\CriticalStrike10.wav" />
+    <Content Include="Content\Sound\Animation\Person\660\CriticalStrike11.wav" />
+    <Content Include="Content\Sound\Animation\Person\660\CriticalStrike12.wav" />
+    <Content Include="Content\Sound\Animation\Person\660\CriticalStrike13.wav" />
+    <Content Include="Content\Sound\Animation\Person\660\CriticalStrike2.wav" />
+    <Content Include="Content\Sound\Animation\Person\660\CriticalStrike3.wav" />
+    <Content Include="Content\Sound\Animation\Person\660\CriticalStrike4.wav" />
+    <Content Include="Content\Sound\Animation\Person\660\CriticalStrike5.wav" />
+    <Content Include="Content\Sound\Animation\Person\660\CriticalStrike6.wav" />
+    <Content Include="Content\Sound\Animation\Person\660\CriticalStrike7.wav" />
+    <Content Include="Content\Sound\Animation\Person\660\CriticalStrike8.wav" />
+    <Content Include="Content\Sound\Animation\Person\660\CriticalStrike9.wav" />
+    <Content Include="Content\Sound\Animation\Person\662\CriticalStrike1.wav" />
+    <Content Include="Content\Sound\Animation\Person\9172\9172-attacked-01.wav" />
+    <Content Include="Content\Sound\Animation\Person\9172\CriticalStrike1.wav" />
+    <Content Include="Content\Sound\Animation\Person\9172\CriticalStrike2.wav" />
+    <Content Include="Content\Sound\Animation\Person\9172\CriticalStrike3.wav" />
+    <Content Include="Content\Sound\Animation\Person\98\98-attacked-01.wav" />
+    <Content Include="Content\Sound\Animation\Person\98\98-attacked-02.wav" />
+    <Content Include="Content\Sound\Animation\Person\98\98-attacked-03.wav" />
+    <Content Include="Content\Sound\Animation\Person\98\98-attacked-04.wav" />
+    <Content Include="Content\Sound\Animation\Person\98\98-attacked-05.wav" />
+    <Content Include="Content\Sound\Animation\Person\98\CriticalStrike1.wav" />
+    <Content Include="Content\Sound\Animation\Person\98\CriticalStrike10.wav" />
+    <Content Include="Content\Sound\Animation\Person\98\CriticalStrike11.wav" />
+    <Content Include="Content\Sound\Animation\Person\98\CriticalStrike12.wav" />
+    <Content Include="Content\Sound\Animation\Person\98\CriticalStrike13.wav" />
+    <Content Include="Content\Sound\Animation\Person\98\CriticalStrike2.wav" />
+    <Content Include="Content\Sound\Animation\Person\98\CriticalStrike3.wav" />
+    <Content Include="Content\Sound\Animation\Person\98\CriticalStrike4.wav" />
+    <Content Include="Content\Sound\Animation\Person\98\CriticalStrike5.wav" />
+    <Content Include="Content\Sound\Animation\Person\98\CriticalStrike6.wav" />
+    <Content Include="Content\Sound\Animation\Person\98\CriticalStrike7.wav" />
+    <Content Include="Content\Sound\Animation\Person\98\CriticalStrike8.wav" />
+    <Content Include="Content\Sound\Animation\Person\98\CriticalStrike9.wav" />
     <Content Include="Icon.ico" />
     <Content Include="LICENSES-MersenneTwister.txt" />
   </ItemGroup>
