--- a/WorldOfTheThreeKingdoms/WorldOfTheThreeKingdoms.csproj
+++ b/WorldOfTheThreeKingdoms/WorldOfTheThreeKingdoms.csproj
@@ -1665,6 +1665,9 @@
     <Reference Include="SixLabors.Shapes">
       <HintPath>..\References\SixLabors.Shapes.dll</HintPath>
     </Reference>
+    <Reference Include="SpriteFontPlus, Version=0.6.3.15, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\SpriteFontPlus.MonoGame.0.6.3.15\lib\net45\SpriteFontPlus.dll</HintPath>
+    </Reference>
     <Reference Include="Steamworks.NET, Version=12.0.0.0, Culture=neutral, processorArchitecture=AMD64">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\References\Win\Steamworks.NET.dll</HintPath>
