--- a/WorldOfTheThreeKingdoms/packages.config
+++ b/WorldOfTheThreeKingdoms/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="MersenneTwister" version="1.0.5" targetFramework="net45" />
+  <package id="SpriteFontPlus.MonoGame" version="0.6.3.15" targetFramework="net45" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net45" />
 </packages>
