--- a/WorldOfTheThreeKingdoms/WorldOfTheThreeKingdoms.csproj
+++ b/WorldOfTheThreeKingdoms/WorldOfTheThreeKingdoms.csproj
@@ -20247,7 +20247,9 @@
     <Content Include="Content\Font\Messages.txt" />
     <Content Include="Content\Font\MessagesDenyT.txt" />
     <Content Include="Content\Font\MessagesL.txt" />
-    <Content Include="Content\LICENSES%283rd-party%29.txt" />
+    <Content Include="Content\LICENSES%283rd-party%29.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\Sound\Animation\Person\185\185-attacked-01.wav" />
     <Content Include="Content\Sound\Animation\Person\185\185-attacked-02.wav" />
     <Content Include="Content\Sound\Animation\Person\185\185-attacked-03.wav" />
@@ -20402,7 +20404,9 @@
     <Content Include="Content\Sound\Animation\Person\98\CriticalStrike7.wav" />
     <Content Include="Content\Sound\Animation\Person\98\CriticalStrike8.wav" />
     <Content Include="Content\Sound\Animation\Person\98\CriticalStrike9.wav" />
-    <Content Include="Content\Textures\Resources\Start\Menu.png" />
+    <Content Include="Content\Textures\Resources\Start\Menu.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Icon.ico" />
     <Content Include="LICENSES-MersenneTwister.txt" />
   </ItemGroup>
@@ -22689,7 +22693,9 @@
     <None Include="Content\Font\hwzs.ttf" />
     <None Include="Content\Font\simhei.ttf" />
     <None Include="Content\Font\xingshu.ttf" />
-    <None Include="Content\LICENSE" />
+    <None Include="Content\LICENSE">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
